--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="swiper mySwiper py-3">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <div class="card_container">
+              <div class="card_container" style="cursor: grab">
                 <div class="swiper mySwiper2">
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
@@ -141,7 +141,7 @@
               </div>
             </div>
             <div class="swiper-slide">
-              <div class="card_container">
+              <div class="card_container" style="cursor: grab">
                 <div class="swiper mySwiper2">
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
@@ -249,7 +249,7 @@
               </div>
             </div>
             <div class="swiper-slide">
-              <div class="card_container">
+              <div class="card_container" style="cursor: grab">
                 <div class="swiper mySwiper2">
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
@@ -357,7 +357,7 @@
               </div>
             </div>
             <div class="swiper-slide">
-              <div class="card_container">
+              <div class="card_container" style="cursor: grab">
                 <div class="swiper mySwiper2">
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
@@ -465,7 +465,7 @@
               </div>
             </div>
             <div class="swiper-slide">
-              <div class="card_container">
+              <div class="card_container" style="cursor: grab">
                 <div class="swiper mySwiper2">
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
@@ -573,7 +573,7 @@
               </div>
             </div>
             <div class="swiper-slide">
-              <div class="card_container">
+              <div class="card_container" style="cursor: grab">
                 <div class="swiper mySwiper2">
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
@@ -681,7 +681,7 @@
               </div>
             </div>
             <div class="swiper-slide">
-              <div class="card_container">
+              <div class="card_container" style="cursor: grab">
                 <div class="swiper mySwiper2">
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
@@ -789,7 +789,7 @@
               </div>
             </div>
             <div class="swiper-slide">
-              <div class="card_container">
+              <div class="card_container" style="cursor: grab">
                 <div class="swiper mySwiper2">
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
@@ -897,7 +897,7 @@
               </div>
             </div>
             <div class="swiper-slide">
-              <div class="card_container">
+              <div class="card_container" style="cursor: grab">
                 <div class="swiper mySwiper2">
                   <div class="swiper-wrapper">
                     <div class="swiper-slide">
